--- a/.github/workflows/SFDC-INT_UAT-deploy.yml
+++ b/.github/workflows/SFDC-INT_UAT-deploy.yml
@@ -107,14 +107,14 @@ jobs:
             [.fileName, .componentType, .fullName, .problemType, .problem] |
             @csv' >> validation-results.csv
 
-          echo "Starting deployment..."
-          sf project deploy start \
-            --manifest unpackaged/projectManifest/packageRClient.xml \
-            --test-level RunSpecifiedTests \
-            --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
-            --target-org prod-org \
-            --wait 30
-          echo "Deployment completed."
+          # echo "Starting deployment..."
+          # sf project deploy start \
+          #   --manifest unpackaged/projectManifest/packageRClient.xml \
+          #   --test-level RunSpecifiedTests \
+          #   --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
+          #   --target-org prod-org \
+          #   --wait 30
+          # echo "Deployment completed."
 
   validate-and-deploy-uat:
     needs: validate-and-deploy-int
@@ -167,14 +167,14 @@ jobs:
             [.fileName, .componentType, .fullName, .problemType, .problem] |
             @csv' >> validation-results.csv
 
-          echo "Starting deployment..."
-          sf project deploy start \
-            --manifest unpackaged/projectManifest/packageRClient.xml \
-            --test-level RunSpecifiedTests \
-            --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
-            --target-org prod-org \
-            --wait 30
-          echo "Deployment completed."
+          # echo "Starting deployment..."
+          # sf project deploy start \
+          #   --manifest unpackaged/projectManifest/packageRClient.xml \
+          #   --test-level RunSpecifiedTests \
+          #   --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
+          #   --target-org prod-org \
+          #   --wait 30
+          # echo "Deployment completed."
 
       - name: Archive packageRClient.xml with date
         if: success()
