update deploy file

--- a/.github/workflows/SFDC-INT_UAT-deploy.yml
+++ b/.github/workflows/SFDC-INT_UAT-deploy.yml
@@ -79,6 +79,10 @@ jobs:
             --alias prod-org \
             --set-default
 
+      - name: Debug: Show org info
+        run: |
+          sf org display --target-org prod-org --verbose
+
       - name: Read Test Class Names from File
         id: test-classes
         run: |
@@ -88,6 +92,7 @@ jobs:
       - name: Validate and optionally deploy
         run: |
           echo "Starting validation (dry run)..."
+          echo "Tests to run: '${{ steps.test-classes.outputs.TEST_CLASSES }}'"
           set -e
 
           VALIDATION_OUTPUT=$(sf project deploy start \
@@ -97,7 +102,11 @@ jobs:
             --target-org prod-org \
             --wait 30 \
             --dry-run \
-            --json)
+            --json) || {
+              echo "Deployment failed with exit code $? - validation output:"
+              echo "$VALIDATION_OUTPUT"
+              exit 1
+            }
 
           echo "$VALIDATION_OUTPUT" > validation-result.json
 
@@ -130,6 +139,10 @@ jobs:
             --alias prod-org \
             --set-default
 
+      - name: Debug: Show org info
+        run: |
+          sf org display --target-org prod-org --verbose
+
       - name: Read Test Class Names from File
         id: test-classes
         run: |
@@ -139,6 +152,7 @@ jobs:
       - name: Validate and optionally deploy
         run: |
           echo "Starting validation (dry run)..."
+          echo "Tests to run: '${{ steps.test-classes.outputs.TEST_CLASSES }}'"
           set -e
 
           VALIDATION_OUTPUT=$(sf project deploy start \
@@ -148,7 +162,11 @@ jobs:
             --target-org prod-org \
             --wait 30 \
             --dry-run \
-            --json)
+            --json) || {
+              echo "Deployment failed with exit code $? - validation output:"
+              echo "$VALIDATION_OUTPUT"
+              exit 1
+            }
 
           echo "$VALIDATION_OUTPUT" > validation-result.json
 
