--- a/.github/workflows/SFDC-INT_UAT-deploy.yml
+++ b/.github/workflows/SFDC-INT_UAT-deploy.yml
@@ -82,39 +82,42 @@ jobs:
       - name: Read Test Class Names from File
         id: test-classes
         run: |
-          TEST_CLASSES=$(tr '\n' ',' < unpackaged/projectManifest/specifiedTestsClass/testsToRun.txt | sed 's/ $//')
-          echo "TEST_CLASSES=$TEST_CLASSES" >> $GITHUB_OUTPUT
+          TEST_FLAGS=""
+          while IFS= read -r line || [ -n "$line" ]; do
+            TEST_FLAGS+=" --tests \"$line\""
+          done < unpackaged/projectManifest/specifiedTestsClass/testsToRun.txt
+          echo "TEST_FLAGS=${TEST_FLAGS}" >> $GITHUB_OUTPUT
 
       - name: Validate and optionally deploy
         run: |
           echo "Starting validation (dry run)..."
           set -e
-
-          VALIDATION_OUTPUT=$(sf project deploy start \
+      
+          VALIDATION_OUTPUT=$(eval sf project deploy start \
             --manifest unpackaged/projectManifest/packageRClient.xml \
             --test-level RunSpecifiedTests \
-            --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
+            ${{ steps.test-classes.outputs.TEST_FLAGS }} \
             --target-org prod-org \
             --wait 30 \
             --dry-run \
             --json)
-
+      
           echo "$VALIDATION_OUTPUT" > validation-result.json
-
+      
           echo "File Path,Component Type,Full Name,Problem Type,Problem" > validation-results.csv
           echo "$VALIDATION_OUTPUT" | jq -r '
             .result.details.componentFailures[]? |
             [.fileName, .componentType, .fullName, .problemType, .problem] |
             @csv' >> validation-results.csv
-
-          # echo "Starting deployment..."
-          # sf project deploy start \
-          #   --manifest unpackaged/projectManifest/packageRClient.xml \
-          #   --test-level RunSpecifiedTests \
-          #   --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
-          #   --target-org prod-org \
-          #   --wait 30
-          # echo "Deployment completed."
+      
+          echo "Starting deployment..."
+          eval sf project deploy start \
+            --manifest unpackaged/projectManifest/packageRClient.xml \
+            --test-level RunSpecifiedTests \
+            ${{ steps.test-classes.outputs.TEST_FLAGS }} \
+            --target-org prod-org \
+            --wait 30
+          echo "Deployment completed."
 
   validate-and-deploy-uat:
     needs: validate-and-deploy-int
@@ -142,38 +145,41 @@ jobs:
       - name: Read Test Class Names from File
         id: test-classes
         run: |
-          TEST_CLASSES=$(tr '\n' ',' < unpackaged/projectManifest/specifiedTestsClass/testsToRun.txt | sed 's/ $//')
-          echo "TEST_CLASSES=$TEST_CLASSES" >> $GITHUB_OUTPUT
+          TEST_FLAGS=""
+          while IFS= read -r line || [ -n "$line" ]; do
+            TEST_FLAGS+=" --tests \"$line\""
+          done < unpackaged/projectManifest/specifiedTestsClass/testsToRun.txt
+          echo "TEST_FLAGS=${TEST_FLAGS}" >> $GITHUB_OUTPUT
 
       - name: Validate and optionally deploy
         run: |
           echo "Starting validation (dry run)..."
           set -e
-
-          VALIDATION_OUTPUT=$(sf project deploy start \
+      
+          VALIDATION_OUTPUT=$(eval sf project deploy start \
             --manifest unpackaged/projectManifest/packageRClient.xml \
             --test-level RunSpecifiedTests \
-            --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
+            ${{ steps.test-classes.outputs.TEST_FLAGS }} \
             --target-org prod-org \
             --wait 30 \
             --dry-run \
             --json)
-
+      
           echo "$VALIDATION_OUTPUT" > validation-result.json
-
+      
           echo "File Path,Component Type,Full Name,Problem Type,Problem" > validation-results.csv
           echo "$VALIDATION_OUTPUT" | jq -r '
             .result.details.componentFailures[]? |
             [.fileName, .componentType, .fullName, .problemType, .problem] |
             @csv' >> validation-results.csv
-
-          # echo "Starting deployment..."
-          # sf project deploy start \
-          #   --manifest unpackaged/projectManifest/packageRClient.xml \
-          #   --test-level RunSpecifiedTests \
-          #   --tests "${{ steps.test-classes.outputs.TEST_CLASSES }}" \
-          #   --target-org prod-org \
-          #   --wait 30
+      
+          echo "Starting deployment..."
+          eval sf project deploy start \
+            --manifest unpackaged/projectManifest/packageRClient.xml \
+            --test-level RunSpecifiedTests \
+            ${{ steps.test-classes.outputs.TEST_FLAGS }} \
+            --target-org prod-org \
+            --wait 30
           echo "Deployment completed."
 
       - name: Archive packageRClient.xml with date
