update deploy file

--- a/.github/workflows/SFDC-INT_UAT-deploy.yml
+++ b/.github/workflows/SFDC-INT_UAT-deploy.yml
@@ -93,22 +93,22 @@ jobs:
           echo "Starting validation (dry run)..."
           set -e
       
-          VALIDATION_OUTPUT=$(eval sf project deploy start \
-            --manifest unpackaged/projectManifest/packageRClient.xml \
-            --test-level RunSpecifiedTests \
-            ${{ steps.test-classes.outputs.TEST_FLAGS }} \
-            --target-org prod-org \
-            --wait 30 \
-            --dry-run \
-            --json)
+          # VALIDATION_OUTPUT=$(eval sf project deploy start \
+          #   --manifest unpackaged/projectManifest/packageRClient.xml \
+          #   --test-level RunSpecifiedTests \
+          #   ${{ steps.test-classes.outputs.TEST_FLAGS }} \
+          #   --target-org prod-org \
+          #   --wait 30 \
+          #   --dry-run \
+          #   --json)
       
-          echo "$VALIDATION_OUTPUT" > validation-result.json
+          # echo "$VALIDATION_OUTPUT" > validation-result.json
       
-          echo "File Path,Component Type,Full Name,Problem Type,Problem" > validation-results.csv
-          echo "$VALIDATION_OUTPUT" | jq -r '
-            .result.details.componentFailures[]? |
-            [.fileName, .componentType, .fullName, .problemType, .problem] |
-            @csv' >> validation-results.csv
+          # echo "File Path,Component Type,Full Name,Problem Type,Problem" > validation-results.csv
+          # echo "$VALIDATION_OUTPUT" | jq -r '
+          #   .result.details.componentFailures[]? |
+          #   [.fileName, .componentType, .fullName, .problemType, .problem] |
+          #   @csv' >> validation-results.csv
       
           echo "Starting deployment..."
           eval sf project deploy start \
@@ -156,22 +156,22 @@ jobs:
           echo "Starting validation (dry run)..."
           set -e
       
-          VALIDATION_OUTPUT=$(eval sf project deploy start \
-            --manifest unpackaged/projectManifest/packageRClient.xml \
-            --test-level RunSpecifiedTests \
-            ${{ steps.test-classes.outputs.TEST_FLAGS }} \
-            --target-org prod-org \
-            --wait 30 \
-            --dry-run \
-            --json)
+          # VALIDATION_OUTPUT=$(eval sf project deploy start \
+          #   --manifest unpackaged/projectManifest/packageRClient.xml \
+          #   --test-level RunSpecifiedTests \
+          #   ${{ steps.test-classes.outputs.TEST_FLAGS }} \
+          #   --target-org prod-org \
+          #   --wait 30 \
+          #   --dry-run \
+          #   --json)
       
-          echo "$VALIDATION_OUTPUT" > validation-result.json
+          # echo "$VALIDATION_OUTPUT" > validation-result.json
       
-          echo "File Path,Component Type,Full Name,Problem Type,Problem" > validation-results.csv
-          echo "$VALIDATION_OUTPUT" | jq -r '
-            .result.details.componentFailures[]? |
-            [.fileName, .componentType, .fullName, .problemType, .problem] |
-            @csv' >> validation-results.csv
+          # echo "File Path,Component Type,Full Name,Problem Type,Problem" > validation-results.csv
+          # echo "$VALIDATION_OUTPUT" | jq -r '
+          #   .result.details.componentFailures[]? |
+          #   [.fileName, .componentType, .fullName, .problemType, .problem] |
+          #   @csv' >> validation-results.csv
       
           echo "Starting deployment..."
           eval sf project deploy start \
